# programming_formalisms_testing

./: .gitignore  .pylintrc  .spellcheck.yml  .wordlist.txt  README.md  codecov.yml  main.py  pyproject.toml  speeds.csv
.github/workflows/: check_links.yaml  check_package.yml  check_spelling.yaml  lint_code.yaml  measure_coverage.yml
src/pfmp_richelbilderbeek/: align_solutions.py  prime_solutions.py  sort_solutions.py  tdd_solutions.py  testing_solutions.py
src/pftesting_richelbilderbeek/: __init__.py  tdd_questions.py  testing_questions.py
tests/: __init__.py  test_align_solutions.py  test_prime_solutions.py  test_sort_solutions.py  test_tdd_questions.py  test_tdd_solutions.py  test_testing_questions.py  test_testing_solutions.py
